# ShaderConnect

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
scripts/: UpdateProject.py
src/: CrossShaderCompiler.cpp  CrossShaderCompiler.h  File.cpp  File.h  InputShaderLanguage.h  OutputShaderLanguage.h  ShaderCompiler.h  ShaderType.h  scpch.h
src/Platform/ESSL/: ESSLShaderCompiler.cpp  ESSLShaderCompiler.h
src/Platform/GLSL/: GLSLShaderCompiler.cpp  GLSLShaderCompiler.h
src/Platform/HLSL/: DXILShaderCompiler.cpp  DXILShaderCompiler.h  HLSLShaderCompiler.cpp  HLSLShaderCompiler.h
src/Platform/MetalSL/: MetalLibShaderCompiler.cpp  MetalLibShaderCompiler.h  MetalSLShaderCompiler.cpp  MetalSLShaderCompiler.h
src/Platform/SPIR-V/: SPIRVShaderCompiler.cpp  SPIRVShaderCompiler.h
src/Platform/iOS-MSL/: iOSMSLShaderCompiler.cpp  iOSMSLShaderCompiler.h
src/Platform/macOS-MSL/: macOSMSLShaderCompiler.cpp  macOSMSLShaderCompiler.h
